<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="correct_button">TRUE</string>
    <string name="incorrect_button">FALSE</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the
Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the
Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
freshwater lake.</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="last_question">Last question!</string>
    <string name="first_question">First question!</string>
    <string name="next">Next</string>
    <string name="previous">previous</string>
    <string name="win_message">You win!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="good_game">Good game!</string>
    <string name="end_que">Questions end!</string>
</resources>