<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_australia"
        app:layout_constraintBottom_toTopOf="@id/correct"
        app:layout_constraintLeft_toLeftOf="@id/correct"
        app:layout_constraintRight_toRightOf="@id/incorrect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/correct_button"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        app:layout_constraintEnd_toStartOf="@id/incorrect"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question" />

    <Button
        android:id="@+id/incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/incorrect_button"
        app:layout_constraintBottom_toBottomOf="@id/correct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/correct"
        app:layout_constraintTop_toTopOf="@id/correct"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/incorrect"
        app:layout_constraintTop_toBottomOf="@id/correct"
        android:contentDescription="@string/next"/>

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/correct"
        app:layout_constraintTop_toBottomOf="@id/correct"
        android:src="@drawable/arrow_left"
        android:contentDescription="@string/previous"/>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/prev_button"
        app:layout_constraintEnd_toEndOf="@id/next_button"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        android:layout_marginTop="5dp"
        android:text="@string/cheat_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>